--- a/SoTayCanBo/res/drawable/layout_border.xml
+++ b/SoTayCanBo/res/drawable/layout_border.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <stroke android:width="2dp" android:height="2dp"
-                android:color="#cacdd3" />
-            <padding android:left="1dp" android:top="1dp" android:right="1dp"
-                android:bottom="1dp" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-            <corners android:radius="0dp" android:bottomRightRadius="2dp"
-                android:bottomLeftRadius="2dp" android:topLeftRadius="2dp"
+    <item>
+        <shape android:shape="rectangle" >
+            <stroke
+                android:height="1dp"
+                android:width="1dp"
+                android:color="#cacdd3" />
+
+            <padding
+                android:bottom="1dp"
+                android:left="1dp"
+                android:right="1dp"
+                android:top="1dp" />
+
+            <corners
+                android:bottomLeftRadius="2dp"
+                android:bottomRightRadius="2dp"
+                android:radius="0dp"
+                android:topLeftRadius="2dp"
                 android:topRightRadius="2dp" />
         </shape>
     </item>
