--- a/SoTayCanBo/res/values/colors.xml
+++ b/SoTayCanBo/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorDarkPrimary">#2B628A</color>
     <color name="background_grey">#F0F0F0</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
 </resources>
