--- a/SoTayCanBo/res/drawable/button_bolder.xml
+++ b/SoTayCanBo/res/drawable/button_bolder.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-  android:shape="rectangle">
-  <gradient android:startColor="#9498fd" 
-    android:endColor="#9498fd"
-    android:angle="270" />
-  <corners android:radius="5dp" />
-  <stroke android:width="0px" android:color="#9498fd" />
+    android:shape="rectangle" >
+
+    <!-- <gradient
+        android:angle="270"
+        android:endColor="#9498fd"
+        android:startColor="#9498fd" />
+
+    <corners android:radius="5dp" /> -->
+
+    <stroke
+        android:width="1px"
+        android:color="@color/white" />
+    
+    <solid android:color="@color/white"/>
 </shape>
