--- a/SoTayCanBo/res/drawable/layout_border.xml
+++ b/SoTayCanBo/res/drawable/layout_border.xml
@@ -4,9 +4,9 @@
     <item>
         <shape android:shape="rectangle" >
             <stroke
-                android:height="1dp"
-                android:width="1dp"
-                android:color="#cacdd3" />
+                android:height="1px"
+                android:width="1px"
+                android:color="@color/white" />
 
             <padding
                 android:bottom="1dp"
@@ -14,12 +14,16 @@
                 android:right="1dp"
                 android:top="1dp" />
 
-            <corners
+            <!--
+                 <corners
                 android:bottomLeftRadius="2dp"
                 android:bottomRightRadius="2dp"
                 android:radius="0dp"
                 android:topLeftRadius="2dp"
                 android:topRightRadius="2dp" />
+                
+            -->
+            <solid android:color="@color/transparent"/>
         </shape>
     </item>
 
