--- a/SoTayCanBo/res/layout/activity_login.xml
+++ b/SoTayCanBo/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_main"
+    android:background="@drawable/splash_noicon"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,100 +10,96 @@
     tools:context="com.hou.sotaycanbo.LoginActivity" >
 
     <LinearLayout
-        android:id="@+id/linear2"
+        android:id="@+id/linear3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
-        android:gravity="center_vertical|center_horizontal"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp" >
-
-        <LinearLayout
-            android:id="@+id/linear3"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="15dp"
-            android:gravity="center_horizontal" >
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:drawableLeft="@drawable/logo_hou" />
-
-            <TextView
-                android:id="@+id/logo_tv"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
-                android:text="SỔ TAY CÁN BỘ"
-                android:textColor="@color/black"
-                android:textSize="20sp"/>
-        </LinearLayout>
-
-        <View
-            android:id="@+id/view1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:background="#cacdd3" />
-
-        <EditText
-            android:id="@+id/edt_email"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/layout_border"
-            android:drawableLeft="@drawable/user_login"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:gravity="left|center_vertical"
-            android:hint="Tên đăng nhập"
-            android:inputType="textEmailAddress"
-            android:maxLength="100"
-            android:paddingLeft="10dp" />
-
-        <EditText
-            android:id="@+id/edt_pass"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/layout_border"
-            android:drawableLeft="@drawable/password_login"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:gravity="left|center_vertical"
-            android:hint="Mật khẩu"
-            android:inputType="textPassword"
-            android:maxLength="100"
-            android:paddingLeft="10dp" />
-
-        <Button
-            android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
-            android:layout_height="36dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button_bolder"
-            android:gravity="center"
-            android:text="ĐĂNG NHẬP"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:paddingTop="15dp" >
 
         <TextView
-            android:id="@+id/tv_quenmatkhau"
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/logo_hou"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/logo_tv"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:text="Quên mật khẩu?"
-            android:textColor="#6c6c6c"
-            android:textSize="14sp" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:text="@string/login_stcb"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
     </LinearLayout>
+
+    <EditText
+        android:id="@+id/edt_pass"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_above="@+id/btn_login"
+        android:layout_alignLeft="@+id/tv_quenmatkhau"
+        android:layout_marginBottom="70dp"
+        android:background="@drawable/layout_border"
+        android:drawableLeft="@drawable/password_login"
+        android:drawablePadding="10dp"
+        android:ems="10"
+        android:gravity="left|center_vertical"
+        android:hint="@string/login_matkhau"
+        android:inputType="textPassword"
+        android:maxLength="100"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_alignLeft="@+id/edt_email"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/button_bolder"
+        android:gravity="center"
+        android:text="@string/title_activity_login"
+        android:textAllCaps="true"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/edt_email"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignLeft="@+id/tv_quenmatkhau"
+        android:layout_centerVertical="true"
+        android:background="@drawable/layout_border"
+        android:drawableLeft="@drawable/user_login"
+        android:drawablePadding="10dp"
+        android:ems="10"
+        android:gravity="left|center_vertical"
+        android:hint="@string/login_tendangnhap"
+        android:inputType="textEmailAddress"
+        android:maxLength="100"
+        android:paddingLeft="10dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/tv_quenmatkhau"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_alignLeft="@+id/linear3"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="@string/login_quenmatkhau"
+        android:textColor="@color/white"
+        android:textSize="14sp" />
 
 </RelativeLayout>
