--- a/SoTayCanBo/res/layout/fragment_sotay.xml
+++ b/SoTayCanBo/res/layout/fragment_sotay.xml
@@ -2,7 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
+    <ListView
+        android:id="@+id/lvSotay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
