--- a/SoTayCanBo/res/layout/dialog_chitiet_sukien.xml
+++ b/SoTayCanBo/res/layout/dialog_chitiet_sukien.xml
@@ -22,28 +22,22 @@
 
                 <TextView
                     android:id="@+id/sukienName"
-                    android:text="name"
-                    android:layout_marginRight="45dp"
-                    android:layout_alignParentTop="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="45dp"
+                    android:text="name"
                     android:textColor="@color/black"
                     android:textSize="20dp" />
-                <ImageView 
-                    android:id="@+id/btnGetEvent"
-                    android:background="@drawable/ic_bookmark_outline_black_48dp"
-                    android:layout_alignParentRight="true"
+
+                <ImageView
+                    android:id="@+id/btnAddEvent"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:scaleType="fitXY"/>
-                <ImageView 
-                    android:id="@+id/btnDropEvent"
-                    android:background="@drawable/ic_bookmark_blue_48dp"
                     android:layout_alignParentRight="true"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
+                    android:background="@drawable/ic_getevent"
                     android:scaleType="fitXY"
-                    android:visibility="gone"/>
+                    android:visibility="visible" />
             </RelativeLayout>
 
             <TextView
@@ -51,8 +45,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="15dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="15dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,8 +57,8 @@
                     android:id="@+id/sukienTimeBegin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -77,8 +71,8 @@
                     android:id="@+id/sukienRoom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,8 +85,8 @@
                     android:id="@+id/sukienPlace"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textSize="15dp" />
             </LinearLayout>
 
             <TextView
@@ -130,8 +124,9 @@
     <Button
         android:id="@+id/btnDismiss"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:padding="10dp"
         android:text="@string/btnDismiss"
         android:textColor="@color/white" />
 
