--- a/SoTayCanBo/res/layout/dialog_sotay_addnew.xml
+++ b/SoTayCanBo/res/layout/dialog_sotay_addnew.xml
@@ -20,7 +20,7 @@
         android:layout_height="1dp"
         android:layout_below="@id/edtTenSotay"
         android:layout_marginBottom="8dp"
-        android:background="@color/line" />
+        android:background="@color/line_grey" />
 
     <Button
         android:id="@+id/btnCancel"
