--- a/SoTayCanBo/res/layout/fragment_lienhe_khoa.xml
+++ b/SoTayCanBo/res/layout/fragment_lienhe_khoa.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <ListView
+        android:id="@+id/lvDonvi_Khoa"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:text="Khoa"/>
+        android:layout_height="match_parent" >
+    </ListView>
 
 </LinearLayout>
