--- a/SoTayCanBo/res/values/colors.xml
+++ b/SoTayCanBo/res/values/colors.xml
@@ -4,15 +4,16 @@
     <!-- Action bar -->
     <color name="colorPrimary">#3269a3</color>
     <color name="colorDarkPrimary">#2B628A </color>
-    
+
     <!-- Color -->
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="green">#8FCC85</color>
     <color name="blue">#ff33b5e5</color>
+    <color name="blue_dark">#0d47a1</color>
     <color name="grey">#757575</color>
-	
+
     <!-- Line -->
     <color name="line_grey">#fafafa</color>
-    
+
 </resources>
