--- a/SoTayCanBo/res/layout/activity_canbo.xml
+++ b/SoTayCanBo/res/layout/activity_canbo.xml
@@ -67,9 +67,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:drawableLeft="@drawable/canbo_sdt"
+                android:drawableLeft="@drawable/canbo_name"
                 android:drawablePadding="30dp"
                 android:enabled="false"
+                android:focusable="false"
                 android:paddingBottom="15dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="15dp"
@@ -91,6 +92,7 @@
                 android:drawableLeft="@drawable/canbo_sdt"
                 android:drawablePadding="30dp"
                 android:enabled="false"
+                android:focusable="false"
                 android:paddingBottom="15dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="15dp"
@@ -109,9 +111,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:drawableLeft="@drawable/canbo_sdt"
+                android:drawableLeft="@drawable/canbo_email"
                 android:drawablePadding="30dp"
                 android:enabled="false"
+                android:focusable="false"
                 android:paddingBottom="15dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="15dp"
@@ -130,9 +133,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                android:drawableLeft="@drawable/canbo_sdt"
+                android:drawableLeft="@drawable/canbo_home"
                 android:drawablePadding="30dp"
                 android:enabled="false"
+                android:focusable="false"
                 android:paddingBottom="15dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="15dp"
