--- a/SoTayCanBo/res/drawable/button_bolder.xml
+++ b/SoTayCanBo/res/drawable/button_bolder.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- <gradient
-        android:angle="270"
-        android:endColor="#9498fd"
-        android:startColor="#9498fd" />
+    <item android:state_pressed="true">
+        <shape>
+            <corners android:radius="0dp" />
 
-    <corners android:radius="5dp" /> -->
+            <stroke android:width="1px" 
+                	android:color="#EEEEEE" />
 
-    <stroke
-        android:width="1px"
-        android:color="@color/white" />
+            <solid android:color="#EEEEEE" />
+        </shape>
+        
+    </item>
     
-    <solid android:color="@color/white"/>
-</shape>
+    <item>
+        <shape>
+            <gradient android:angle="270" 
+                	  android:endColor="@color/white" 
+                	  android:startColor="@color/white" />
+
+            <corners android:radius="0dp" />
+        </shape>
+     </item>
+
+</selector>
