--- a/SoTayCanBo/res/values/styles.xml
+++ b/SoTayCanBo/res/values/styles.xml
@@ -138,4 +138,20 @@
     </style>
     <!-- END - QUICK ACTION -->
 
+
+    <!-- DEFAULT BUTTON TEXT -->
+    <style name="DefaultButtonText">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:textColor">#FFF</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+    <!-- END - DEFAULT BUTTON TEXT -->
+
 </resources>
